# kbot

./: getmarkets.py
kalshi-pol-bot/: .env  LICENSE  README.md  betting_models.py  capital_manager.py  config.py  diagnose_market.py  dump_kalshi_events.py  env_template.txt  kalshi_client.py  kalshi_private_key.pem  openai_utils.py  perplexity_client.py  position_manager.py  pyproject.toml  research_client.py  researchers.py  sanity_test.py  test_auth.py  test_network.py  test_perplexity.py  test_perplexity_integration.py  testprob.py  trading_bot.py
kalshi-pol-bot/betting_decisions/: betting_decisions_20251208_144842.csv  betting_decisions_20251208_151330.csv  betting_decisions_20251208_152137.csv  betting_decisions_20251208_153356.csv  betting_decisions_20251208_205242.csv  betting_decisions_20251208_212538.csv  betting_decisions_20251209_014557.csv  betting_decisions_20251209_022651.csv  betting_decisions_20251209_192825.csv  betting_decisions_20251209_231058.csv  betting_decisions_20251210_025648.csv  betting_decisions_20251210_032346.csv  betting_decisions_20251210_035013.csv  betting_decisions_20251210_035358.csv  betting_decisions_20251210_044425.csv  betting_decisions_20251210_050046.csv  betting_decisions_20251210_053958.csv  betting_decisions_20251210_055605.csv
